[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "hexlet learning project 1"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Games/Entertainment",
    "Programming Language :: Python :: 3.10",
    "Framework :: Flake8" 
]
authors = ["Sesiunina Olga <sesyunina.olga7@gmail.com>"]
repository = "https://github.com/Xrustic/python-project-49"
readme = "README.md"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
brain-games = "brain_games.scripts.brain_games:main"
